添加bar chart相关的api，绘制直方图
