# lib/units/api/controllers/testing.js
@@ -13,7 +13,8 @@ var log = logger.createLogger('api:controllers:testing')
 module.exports = {
   getTestingList: getTestingList
 , getTestingReport: getTestingReport
-, getTestingChart: getTestingChart
+, getTestingPieChart: getTestingPieChart
+, getTestingBarChart: getTestingBarChart
 }
 
 function getTestingList(req, res) {
@@ -63,10 +64,10 @@ function getTestingReport(req, res) {
     })
 }
 
-function getTestingChart(req, res){
+function getTestingPieChart(req, res){
   var name = req.swagger.params.name.value
   var fields = req.swagger.params.fields.value
-  dbapi.loadTestingStat(name)
+  dbapi.loadTestingPieStat(name)
     .then(function(cursor) {
       return Promise.promisify(cursor.toArray, cursor)()
         .then(function(list) {
@@ -88,3 +89,36 @@ function getTestingChart(req, res){
       })
     })
 }
+
+
+function getTestingBarChart(req, res){
+  var name = req.swagger.params.name.value
+  var fields = req.swagger.params.fields.value
+  dbapi.loadTestingBarStat(name)
+    .then(function(cursor) {
+      return Promise.promisify(cursor.toArray, cursor)()
+        .then(function(list) {
+          console.log(list)
+          var labels = []
+          var dataset = []
+          list.forEach(function(obj){
+            labels.push(obj.group)
+            dataset.push(obj.reduction.length)
+          })
+          res.json({
+            success: true
+            , labels: labels
+            , dataset: dataset
+          })
+        })
+    })
+    .catch(function(err) {
+      log.error('Failed to load device "%s": ', err.stack)
+      res.status(500).json({
+        success: false
+      })
+    })
+}
+
+
+
